# c4

./: .gitignore  Cargo.toml  README.md  flake.nix  justfile
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 2l0w2riap5nllinmqdqxw2nw2yvy2h7f-source  4w47d6mz6wcpg559zgviy57fg5s1wavv-source  njaf351af3vyricdvzgvwjaxcnysy50k-source  np5lzbi7g5frsj4islsbdj6z162ys2cq-source  q1xsswrh8rfy39561x8hc3anfrbxzwvl-source  s0m4wf1fapwng8akacd4sr6wkvhcfyz6-source
.github/workflows/: ci.yml
docs/: design.md
examples/: settings.json
src/: conduct.rs  hook.rs  lib.rs  main.rs  normalize.rs  record.rs  transcript.rs
src/storage/: csv.rs  mock.rs  mod.rs  r2.rs
