[package]
name = "claude-logger"
version = "0.1.0"
edition = "2021"
description = "Collects and normalizes Bash commands executed via Claude Code hooks"
license = "MIT"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shell-words = "1"

[profile.release]
lto = true
strip = true
