[package]
name = "claude-logger"
version = "0.1.0"
edition = "2021"
description = "Collects and normalizes Bash commands executed via Claude Code hooks"
license = "MIT"

[dependencies]
anyhow = "1"
async-trait = "0.1"
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1"
csv = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shell-words = "1"
time = { version = "0.3", features = ["formatting", "serde", "macros"] }
tokio = { version = "1", features = [
  "rt",
  "macros",
  "io-util",
  "io-std",
  "time",
] }

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
strip = true
